TestSuite/errors/err0068.pas
type TClass = class<T> where T: System.IComparable, System.IComparable;//??????

end;

begin
end.